Clear Cookies of webview before initializing

--- a/app/src/main/res/xml/authenticator.xml
+++ b/app/src/main/res/xml/authenticator.xml
@@ -3,5 +3,4 @@
                        android:accountType="io.frappe.frappeauthenticator"
                        android:icon="@drawable/frappe"
                        android:smallIcon="@drawable/frappe"
-                       android:label="@string/label"
-                       android:accountPreferences="@xml/prefs"/>
+                       android:label="@string/label" />
