--- a/app/src/main/res/xml/contacts.xml
+++ b/app/src/main/res/xml/contacts.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ContactsSource
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <ContactsDataKind
-        android:mimeType="vnd.android.cursor.item/io.frappe.frappeauthenticator"
-        android:icon="@drawable/frappe"
-        android:summaryColumn="data2"
-        android:detailColumn="data3" />
+
+<ContactsSource xmlns:android="http://schemas.android.com/apk/res/android">
+<ContactsDataKind
+    android:icon="@drawable/frappe"
+    android:mimeType="vnd.android.cursor.item/vnd.io.frappe.frappeauthenticator.contact"
+    android:summaryColumn="data2"
+    android:detailColumn="data3"
+    android:detailSocialSummary="true" />
 </ContactsSource>
