--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -9,12 +9,10 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="io.frappe.frappeauthenticator.sync.ProfileActivity">
-
-    <TextView
-        android:text="Profile Text"
+    <ListView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:id="@+id/profiletext"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/profiletext" />
+        android:layout_alignParentStart="true"/>
 </RelativeLayout>
