--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,11 +8,14 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="io.frappe.frappeauthenticator.sync.ProfileActivity">
+    tools:context="io.frappe.frappeauthenticator.sync.ProfileActivity"
+    android:theme="@android:style/Theme.Material.Light.DarkActionBar"
+    >
     <ListView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/profiletext"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:textColor="#474343"/>
 </RelativeLayout>
