--- a/app/src/main/res/layout/act_login.xml
+++ b/app/src/main/res/layout/act_login.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:theme="@android:style/Theme.Material.Light"
+    android:background="@android:color/background_light"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
